✏ Fix scrollbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,23 +8,26 @@ $theme: #FFDD33;
     padding: 0;
     box-sizing: border-box;
 }
+
 html {
     scroll-behavior: smooth;
 }
+
 body {
     font-family: 'Inter', sans-serif;
     margin: 0 auto;
     background: linear-gradient(to right, #1b1f22, #1d2327, #1b1f22);
     color: $white;
+    overflow-x: hidden;
 }
 
 /* Mixins */
 @mixin padding($value) {
-    padding: $value*8px;    
+    padding: $value*8px;
 }
 
 @mixin fontsize($value) {
-    font-size: $value*8px;    
+    font-size: $value*8px;
 }
 
 @mixin flexaligncenter {
@@ -40,13 +43,15 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     .container {
         max-width: 1400px;
         margin: 0 auto;
         width: 100%;
     }
+
     &:nth-child(even) {
-        background: rgb(20,20,20);
+        background: rgb(20, 20, 20);
     }
 }
 
@@ -67,9 +72,11 @@ body {
     cursor: pointer;
     text-decoration: none;
     transition: 0.1s;
+
     &:hover {
         background: $white;
     }
+
     svg {
         vertical-align: middle;
         margin-right: 0.5em;
@@ -82,6 +89,7 @@ body {
     text-transform: uppercase;
     @include fontsize(3);
     margin-bottom: 80px;
+
     &::after {
         content: attr(data-text);
         position: absolute;
@@ -94,12 +102,14 @@ body {
         opacity: 0.2;
         transition: 0.1s;
     }
+
     &:hover {
         &::after {
             color: $theme;
         }
     }
 }
+
 @media screen and (max-width: 1200px) {
     .title::after {
         content: none;
@@ -114,8 +124,21 @@ body {
 
 /* Scrollbar */
 ::-webkit-scrollbar {
-    width: 0;
-    display: none;
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(40, 40, 40);
+}
+
+::-webkit-scrollbar-thumb {
+    background: $white;
+    border-radius: 10px;
+    transition: 0.1s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba($theme, 1);
 }
 
 /* Add partial files */
